git-annex (8.20210128) UNRELEASED; urgency=medium

  * Fix a reversion that made import of a tree from a special remote
    result in a merge that deleted files that were not preferred content
    of that special remote.
  * When adding files to an adjusted branch set up by --unlock-present,
    add them unlocked, not locked.

 -- Joey Hess <id@joeyh.name>  Thu, 28 Jan 2021 12:34:32 -0400

git-annex (8.20210127) upstream; urgency=medium

  * Added mincopies configuration. This is like numcopies, but is
    enforced even more strictly. While numcopies can be violated in
    concurrent drop situations involving special remotes that do not
    support locking, mincopies cannot be. The default value has always
    been 1, but now it can be set to higher values if desired.
  * Behavior change: When numcopies is set to 0, git-annex used to drop
    content without requiring any copies. Now to get that (highly unsafe)
    behavior, mincopies also needs to be set to 0.
  * Behavior change: git-annex trust now needs --force, since unconsidered
    use of trusted repositories can lead to data loss.
  * Behavior change: --trust and --trust-glacier options no longer overrides
    trust, since that can lead to data loss, which should never be enabled
    by an option other than --force.
  * add: Significantly speed up adding lots of non-large files to git,
    by disabling the annex smudge filter when running git add.
  * add --force-small: Run git add rather than updating the index itself,
    so any other smudge filters than the annex one that may be enabled will
    be used.
  * Fix --time-limit, which got broken in several ways by some optimisations
    in version 8.20201007.
  * When syncing changes back from an adjusted branch to the basis branch,
    include deletions of submodules.
    Thanks, Kyle Meyer for the patch.
  * Bug fix: export with -J could fail when two files had the same content.
  * Bug fix: Fix tilde expansion in ssh urls when the tilde is the last